# zero2prod_antonio

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yaml  configuration.yaml
.sqlx/: query-9c21b10ddb652c19f65be3395c4887e3b98b667b5b0dc1ee6d4c0fd3c27e1072.json
configuration/: base.yaml
migrations/: 20231115202900_subscriptions_from_cli.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
