[package]
name = "zero2prod_antonio"
version = "0.1.0"
edition = "2021"
authors = ["Laifsyn"]
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
config = "0.13.3"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
quote = "1.0.33"
reqwest = "0.11.22"

[profile.dbg_release]
inherits = "release"
opt-level = 0
incremental = true
codegen-units = 512
