[package]
name = "zero2prod_antonio"
version = "0.1.0"
edition = "2021"
authors = ["Laifsyn"]
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.4.0"
tracing-actix-web = "0.7.9"
chrono = "0.4.31"
config = "0.13.3"
quote = "1.0.33"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1"
serde-aux = "4.3.1"
claims = "0.7.1"
validator = "0.16.1"
fake = "~2.3"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
quickcheck_macros = "0.9.1"
quickcheck = "0.9.2"
once_cell = "1.18.0"
dotenvy = "0.15.7"
quote = "1.0.33"
reqwest = "0.11.22"

[profile.dbg_release]
inherits = "release"
opt-level = 0
incremental = true
codegen-units = 512
